# jp_project

./: .gitignore  AGENTS.md  README.md  onnx.md  pyproject.toml  requirements.txt
client/: README.md  audio_processing.py  pyproject.toml  requirements.txt  vad.py  voice_stream_client.py
client/src/client/: __init__.py  audio_processing.py  config.py  japanese_text.py  vad.py  voice_stream_client.py
client/src/client/ui/: __init__.py  app.py
server/: README.md  __init__.py  audio_ws_server.py  config.py  pyproject.toml  qwen3_asr_adapter.py
server/src/server/: asr_interface.py  asr_types.py  audio_ws_server.py  config.py  qwen3_asr_adapter.py  qwen3_transformers.py
