[project]
name = "jp-project-client"
version = "0.1.0"
description = "Raspberry Pi voice activity client for streaming PCM audio"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.5.0",
    "sounddevice>=0.4.6",
    "sudachidict_full>=20241021",
    "sudachipy>=0.6.10",
    "wanakana>=1.0.0",
    "webrtcvad>=2.0.10",
    "websockets>=15.0",
]

[project.optional-dependencies]
silero = [
    "numpy>=1.24",
    "onnxruntime",
]

[project.scripts]
jp-voice-client = "client.voice_stream_client:main"
jp-voice-client-ui = "client.ui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/client"]
