[project]
name = "jp-project-server"
version = "0.1.0"
description = "Japanese ASR WebSocket audio receiver"
requires-python = ">=3.11"
dependencies = [
    "qwen-asr",
    "torch",
    "websockets>=15.0",
]

[project.scripts]
jp-asr-server = "server.audio_ws_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]
